  [Incompatible Changes]
    * The STDIN method in the Sys class retruns the return value of the spvm_stdin method in the Sys::IO class.
    * The STDOUT method in the Sys class retruns the return value of the spvm_stdout method in the Sys::IO class.
    * The STDERR method in the Sys class retruns the return value of the spvm_stderr method in the Sys::IO class.
    
0.492 2023-09-18
  [Incompatibe Changes]
    * Remove the readline method in the Sys::IO class. Use the readline method in the Sys class.
0.491 2023-09-13
  [New Features]
    * The following methods in the Sys class are added.
    
      static method say : int ($stream : Sys::IO::FileStream, $string : string);

      static method STDIN : Sys::IO::FileStream ();

      static method STDOUT : Sys::IO::FileStream ();

      static method STDERR : Sys::IO::FileStream ();
      
      static method signal : void ($signum : int, $handler_name : string);
      
      static method kill : int ($sig : int, $pid : int);
      
  [Incompatible Changes]
  
    * The Sys::Signal::Handler::Monitor class is removed.
    * The Sys::Signal::Handler::Unknown class is removed.
    
    * The following methods in the Sys::Signal class are removed.
      
      -  static method reset_monitored_signal : void ($signum : int);
      -  static method check_monitored_signal : int ($signum : int);
    
    * The following methods in the Sys::Signal class are changed.
      
      - native static method signal : Sys::Signal::Handler ($signum : int, $handler : Sys::Signal::Handler);
      + native static method signal : void ($signum : int, $handler : Sys::Signal::Handler);
      
      $handler must be a Sys::Signal::Handler::Default object or a Sys::Signal::Handler::Ignore object. Otherwise an exception is thrown.
      
      User signal handlers are wrong implementation for SPVM differnt from the C language.
    
0.490 2023-09-11
  [Bug Fix]
    * Fix a bug that the fcntl method in the Sys::IO class does not work well.